--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/julianjohannesen/pixel-art-maker#readme",
   "devDependencies": {
-    "jsdoc": "^3.5.5"
+    "jsdoc": "^3.5.5",
+    "tailwind": "^2.0.4"
   },
   "dependencies": {
     "ink-docstrap": "^1.3.2"
